Fixed #1097: [Ag20] Style broken on material and bootstrap classes (Fixed all the setting pages)

--- a/admin/webapp/websrc/app/common/styles/app/common.scss
+++ b/admin/webapp/websrc/app/common/styles/app/common.scss
@@ -1778,6 +1778,7 @@ label {
 
 .mat-mdc-form-field-infix {
   min-height: 0 !important;
+  width: 100% !important;
 }
 
 .quick-filter,
