--- a/admin/webapp/websrc/app/routes/components/users-grid/add-edit-user-dialog/add-edit-user-dialog.component.scss
+++ b/admin/webapp/websrc/app/routes/components/users-grid/add-edit-user-dialog/add-edit-user-dialog.component.scss
@@ -2,7 +2,6 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: auto;
-  grid-gap: 2rem;
 }
 
 .user__field {
@@ -22,5 +21,5 @@
 }
 
 .user__formGroup {
-  padding-top: 2rem;
+  padding-top: 0;
 }
